[package]
name = "saluki"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
log = "0.4.29"
rdkafka = { version = "0.39.0", features = ["cmake-build"] }
uuid = { version = "1.22.0", features = ["v4"] }
env_logger = "0.11.9"
clap-verbosity-flag = "3.0.4"
isis_streaming_data_types = "0.0.6"

[dev-dependencies]
rstest = "0.26.1"
