[project]
name = "saluki"
dynamic = ["version"]
dependencies = [
    "ess-streaming-data-types",
    "confluent-kafka"
]
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}

[project.scripts]
saluki = "saluki:main"


[project.optional-dependencies]
dev = [
    "pyright",
    "ruff"
]
