[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "saluki"
dynamic = ["version"]
dependencies = [
    "ess-streaming-data-types",
    "confluent-kafka"
]
readme = {file = "README.md", content-type = "text/markdown"}
license-files = ["LICENSE"]

[project.scripts]
saluki = "saluki.main:main"

[project.urls]
"Homepage" = "https://github.com/ISISComputingGroup/saluki"
"Bug Reports" = "https://github.com/ISISComputingGroup/saluki/issues"
"Source" = "https://github.com/ISISComputingGroup/saluki"

[project.optional-dependencies]
dev = [
    "pyright",
    "ruff",
    "pytest",
]

[tool.setuptools_scm]
